fixed overflow for 275 pixel devices

--- a/frontend/public/assets/css/main.css
+++ b/frontend/public/assets/css/main.css
@@ -886,7 +886,7 @@ select.focus, select:active.focus, select.active.focus {
 }
 /* section title */
 .section-title h2 {
-	font-size: 60px;
+	font-size: 3.5rem;
 	margin-bottom: 10px;
 }
 .section-title p {
